--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -8,6 +8,7 @@ html
     meta(name='viewport', content='width=device-width')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     link(rel='stylesheet', href='/css/normalize.css')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/styles.css')
     link(rel='shortcut icon', href='img/favicon.ico')
     link(rel='apple-touch-icon', href='img/apple-touch-icon.png')
