Added the instructions modal

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1 LOL
-  p HAI
+  div#intro-modal.modal.hide.fade
+    div.modal-header
+      h3 Welcome to Free Hive Online!
+    div.modal-body
+      p Hive is an awesome tile boardgame that has been re-made here using modern browser technologies.
+      p Instructions to be added!
+      a.btn(href="#", data-dismiss="modal") Close
