moved all the tmp branch change

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -8,3 +8,4 @@ block content
       p Hive is an awesome tile boardgame that has been re-made here using modern browser technologies.
       p Instructions to be added!
       a.btn(href="#", data-dismiss="modal") Close
+  div#container
