WIP : HandView tileStack sharing bug

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -9,3 +9,6 @@ block content
       p Instructions to be added!
       a.btn(href="#", data-dismiss="modal") Close
   div#container
+  div#player-hands
+    div#white-player
+    div#black-player
