--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -6,7 +6,10 @@ block content
       h3 Welcome to Free Hive Online!
     div.modal-body
       p Hive is an awesome tile boardgame that has been re-made here using modern browser technologies.
-      p Instructions to be added!
+      a(href="http://www.gen42.com/downloads/rules/Hive_Rules.pdf") Official Hive Instructions
+      p
+      a(href="http://www.amazon.com/Gen42-Games-5513656-Hive-Original/dp/B000EN5ZLW") If you love Hive as much as we do consider purchasing it!
+      p
       a.btn(href="#", data-dismiss="modal") Close
   div#container
   div#player-hands
