--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -1,5 +1,10 @@
-#container{
+body{
   background: url('../img/background.jpg');
+  background-size: 100% 100%;
+}
+
+#container{
+  background: url('../img/hiveBorder.png');
   background-size: 100% 100%;
 }
 
